--- a/AngularJsUI/Web.config
+++ b/AngularJsUI/Web.config
@@ -11,7 +11,7 @@
   </system.web>
   <system.webServer>
     <directoryBrowse enabled="true"/>
-    <rewrite>
+    <!--<rewrite>
       <rules>
         <rule name="ReWriteRules" stopProcessing ="true">
           <match url=".*"/>
@@ -23,7 +23,7 @@
           <action type="Rewrite" url="/Main.html"/>
         </rule>
       </rules>
-    </rewrite>
+    </rewrite>-->
   </system.webServer>
   <system.codedom>
     <compilers>
