--- a/AngularJsUI/AngularJsUI.csproj
+++ b/AngularJsUI/AngularJsUI.csproj
@@ -67,7 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="commonjs\ConstantsProvider.js" />
+    <Content Include="commonjs\Constants.js" />
     <Content Include="css\layout.css" />
     <Content Include="customservices\factories\AuthenticationFactory.js" />
     <Content Include="customservices\factories\CalcFactory.js" />
