added new theme

--- a/AngularJsUI/AngularJsUI.csproj
+++ b/AngularJsUI/AngularJsUI.csproj
@@ -76,7 +76,11 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="css\animate.css" />
+    <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\font-awesome.min.css" />
     <Content Include="css\layout.css" />
+    <Content Include="css\style.css" />
     <Content Include="customservices\factories\AuthenticationFactory.js" />
     <Content Include="customservices\factories\CalcFactory.js" />
     <Content Include="customservices\factories\EmployeeFactory.js" />
@@ -85,13 +89,36 @@
     <Content Include="customservices\services\EmployeeService.js" />
     <Content Include="features\Calculator\Calculator.html" />
     <Content Include="features\Calculator\CalculatorController.js" />
+    <Content Include="features\Contact\Contact.html" />
     <Content Include="features\Education\Course.html" />
     <Content Include="features\Education\CourseController.js" />
     <Content Include="features\Employee\Employee.html" />
     <Content Include="features\Employee\EmployeeController.js" />
     <Content Include="features\Home\Home.html" />
     <Content Include="features\Home\HomeController.js" />
+    <Content Include="features\Portfolio\Portfolio.html" />
+    <Content Include="features\Subscribe\Subscribe.html" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="img\banner.jpeg" />
+    <Content Include="img\cta-banner.jpg" />
+    <Content Include="img\port01.jpg" />
+    <Content Include="img\port02.jpg" />
+    <Content Include="img\port03.jpg" />
+    <Content Include="img\port04.jpg" />
+    <Content Include="img\port05.jpg" />
+    <Content Include="img\port06.jpg" />
+    <Content Include="index-old.html" />
     <Content Include="index.html" />
+    <Content Include="js\angular-route.js" />
+    <Content Include="js\angular.js" />
+    <Content Include="js\AppModule.js" />
+    <Content Include="js\bootstrap.min.js" />
+    <Content Include="js\custom.js" />
+    <Content Include="js\jquery.easing.min.js" />
+    <Content Include="js\jquery.min.js" />
+    <Content Include="js\RouteConfig.js" />
+    <Content Include="js\wow.js" />
     <Content Include="scripts\angular-animate.js" />
     <Content Include="scripts\angular-route.js" />
     <Content Include="Content\bootstrap.min.css.map" />
@@ -100,6 +127,15 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="scripts\angular.intellisense.js" />
     <Content Include="scripts\angular-ui-router.min.js" />
     <Content Include="scripts\angular.js" />
