--- a/Angular5UI/hello-world/package.json
+++ b/Angular5UI/hello-world/package.json
@@ -19,8 +19,15 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
-    "bootstrap": "^3.4.1",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "glyphicons": "^0.2.0",
+    "ionicons": "^4.6.3",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
+    "open-iconic": "^1.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -30,9 +37,9 @@
     "@angular/cli": "~8.3.12",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,6 +51,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "webpack": "^4.41.2"
   }
 }
