--- a/MvcWeb/packages.config
+++ b/MvcWeb/packages.config
@@ -8,6 +8,10 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net461" />
@@ -15,9 +19,13 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="5.11.1" targetFramework="net461" />
   <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net461" />
