Added DS and algo files

--- a/ConsoleAppLearning/packages.config
+++ b/ConsoleAppLearning/packages.config
@@ -4,4 +4,5 @@
   <package id="MathNet.Numerics" version="4.15.0" targetFramework="net461" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
