--- a/CommonApi/packages.config
+++ b/CommonApi/packages.config
@@ -12,5 +12,6 @@
   <package id="Swagger.Api" version="1.0.0.1" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
