--- a/CommonLearning/packages.config
+++ b/CommonLearning/packages.config
@@ -4,5 +4,6 @@
   <package id="jQuery" version="3.6.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net461" />
 </packages>
