--- a/MvcWeb/packages.config
+++ b/MvcWeb/packages.config
@@ -30,6 +30,7 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Unity" version="5.11.10" targetFramework="net461" />
   <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net461" />
   <package id="Unity.Mvc5" version="1.4.0" targetFramework="net461" />
